# Learny-AI

./: .gitignore  CNAME  LearnyAI_desktop.py  README.md  app.yaml  index.html  pyproject.toml  wasmer.toml
accounts/: create-account.html  myaccount.html  sign-in.html
app/: README.md  app.yaml  main.py  pyproject.toml  requirements.txt  server.py
app/learny/: cli.py  database.py  groq_client.py  messages.py  mysql_database.py  text.py  web_server.py
app/src/: main.py
app/tests/: test_accounts.py  test_groq_only.py  test_wasmer_storage.py
app/web/: app.js  styles.css
data/: knowledge.json
learny/: __init__.py  bot.py  cli.py  conversation.py  database.py  groq_client.py  knowledge.py  learning_rules.py  memory.py  mysql_database.py  storage.py  web_server.py
tests/: test_accounts.py  test_groq_only.py  test_latency_guards.py  test_learny.py  test_wasmer_storage.py  test_web_server.py
web/: accounts.css  accounts.js  app.js  index.html  markdown.js  styles.css
