[project]
name = "learny-ai"
version = "0.2.5"
description = "A Groq-powered Learny AI website."
requires-python = ">=3.10"
dependencies = [
    "PyMySQL>=1.1.1,<2",
    "tzdata>=2026.2",
]

[project.scripts]
learny = "learny.cli:main"
learny-server = "learny.web_server:main"

[tool.unittest]
start-dir = "tests"
